--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -29,6 +29,21 @@
   }
 }
 
+#btn_pink {
+  position: absolute;
+  color: white;
+  bottom:0px;
+  right:0px;
+  background-color: #FF78CB !important;
+  border-color: #FF78CB;
+  float: right;
+  font-family: Arial;
+  font-size: 1em;
+  border-radius: 8px;
+  padding: 10px 20px;
+  text-transform: capitalize;
+}
+
 iframe {
   min-width: 300px !important;
 }
@@ -535,6 +550,12 @@ hr {
     height: 35px;
     margin: 15px 0;
   }
+}
+
+.flex_horizontal {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 
 .flex_horizontal_justify_between {
