--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -558,6 +558,23 @@ hr {
   width: 100%;
 }
 
+.center {
+  max-width: fit-content;
+  margin: 0 auto;
+  padding: 3em 0;
+  h1 {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+  .fa-search {
+    margin-left: 8px;
+    color: #212529;
+  }
+  a {
+    margin-top: -3px;
+  }
+}
+
 .flex_horizontal_justify_between {
   display: flex;
   flex-direction: row;
