--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,6 +6,8 @@
     <%= f.label "Approve profile" %>
     <%= f.check_box :approved_profile, value: @user.approved_profile %><br /><br>
     <%= f.hidden_field :submitted_profile, value: false %>
+  <% elsif @user.approved_profile == false %>
+    <%= f.hidden_field :submitted_profile, value: true %>
   <% end %>
 
   <% if current_user.admin? || (current_user.id.eql? @user.id) %>
