--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -29,7 +29,7 @@
         <div class="card-body">
           <h4 class="pitch_ttl"><%= link_to pitch.title, pitch, style: "color: black; text-decoration: none;" %></h4>
           <p class="card-text"> <%= pitch.description.truncate_words(20) %></p>
-          <%= link_to @button_text, pitch, :class => "btn btn-primary", :id => "btn_pink" %>
+          <%= link_to @button_text, pitch, :class => "btn btn-primary", :id => "btn_pink", style: "margin: 10px;" %>
         </div>
       </div>
     </a>
