--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -42,12 +42,10 @@
       <%= f.file_field :thumbnail %>
     <% end %>
     <br>
-    <br>
     <%= f.label "Category:" %>
     <%= f.collection_select(:category_id, @categories, :id, :name, {prompt: "Select a Category"}, :class => "mdb-select md-form") %>
     <br>
-    <br>
-    <%= f.label "Grab your ideal reader's interest in 1-2 sentences." %>
+    <%= f.label "Grab your ideal reader's interest in 1-2 sentences for Google search." %>
     <%= f.text_field :meta_description, placeholder: 'What is your article about?' %>
     <br>
     <span>If you are writing an article with other writer(s), you may put their emails here to share the article with them. Separate multiple emails with commas.</span>
