made and lowercase in a title

--- a/app/views/reviews/_post_reviews.html.erb
+++ b/app/views/reviews/_post_reviews.html.erb
@@ -29,6 +29,6 @@
     You have <%= 5 - @reviews.count %> reviews left for this article.
     If an editor has still not approved your article after 5 reviews,
     you may no longer submit this article for review. This is to save our editors' time and
-    ensure that every article that's submitted is done to the best of the writer's ability.
+    ensure that every submitted article is done to the best of the writer's ability.
   </i></p><br>
 </div>
