fixed pasting embedded tags

--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -77,8 +77,7 @@
           <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
         </div>
       </div>
-      <br />
-      <p style="width: 100%; min-width: 18rem;">This is a new writer account. Your full writer account will be activated
+      <p style="width: 100%; min-width: 18rem; margin-top: 15px">This is a new writer account. Your full writer account will be activated
           once you publish your first article.</p>
       <br>
     </div>
