update comment counts and disable button if no text

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -29,6 +29,13 @@
   }
 }
 
+.disabled {
+  opacity: 0.2;
+  &:hover {
+    cursor: none;
+  }
+}
+
 #btn_pink {
   position: absolute;
   color: white;
