--- a/app/views/comments/_reply_form.html.erb
+++ b/app/views/comments/_reply_form.html.erb
@@ -20,9 +20,9 @@
   <% @profile_img = current_user.profile.exists? ? image_tag(current_user.profile.url(:square), :class => "profile_img_small") : image_tag("profile_image", :class => "profile_img_small") %>
   <%= link_to(@profile_img, current_user, :class => "profile_img_small", :style => "position: absolute; margin-top: 10px") %>
   <%= form_for(comment, remote: true, id: "submit-comment") do |f| %>
-    <%= f.text_area :text, :placeholder => "Reply to #{parent.user.try(:full_name)}", id: "comment_field", class: "comment_val" %>
+    <%= f.text_area :text, :placeholder => "Reply to #{parent.user.try(:full_name)}", id: "comment_field", class: "comment_val_#{parent.id} comment_field_#{parent.id}", onkeyup: "isDisabled('#{parent.id}')" %>
     <%= f.hidden_field :post_id, :post_id => post.id %>
     <%= f.hidden_field :comment_id, :value => parent.id %>
-    <%= f.submit "", class: "submit_comment" %>
+    <%= f.submit "", class: "submit_comment disabled submit_#{parent.id}" %>
   <% end %>
 </div>
