--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,8 +1,9 @@
 <div class="comment_form_wrapper">
   <% @profile_img = current_user.profile.exists? ? image_tag(current_user.profile.url(:square), :class => "profile_img_small") : image_tag("profile_image", :class => "profile_img_small") %>
   <%= link_to(@profile_img, current_user, :class => "profile_img_small", :style => "position: absolute; margin-top: 10px") %>
+  <% @placeholder = (post.comments.where(comment_id: nil).count.eql? 0) ? "Start the conversation" : "Share your thoughts on this article" %>
   <%= form_for(comment, remote: true, id: "submit-comment") do |f| %>
-    <%= f.text_area :text, :placeholder => "Your feedback", id: "comment_field", class: "comment_val_0 comment_field_0", onkeyup: "isDisabled('0')" %>
+    <%= f.text_area :text, :placeholder => @placeholder, id: "comment_field", class: "comment_val_0 comment_field_0", onkeyup: "isDisabled('0')" %>
     <%= f.hidden_field :post_id, :post_id => post.id %>
     <%= f.submit "", class: "submit_comment disabled submit_0" %>
   <% end %>
