--- a/app/views/pages/topics.html.erb
+++ b/app/views/pages/topics.html.erb
@@ -14,7 +14,7 @@
     <li> Beauty/Fashion Hacks</li>
     <li> 20 signs you are <p class="blank"> (addicted to ____ in love with _____ in need of ____)</p></li>
     <li> <p class="blank">(season/month)</p> must haves under $25</li>
-    <li> <p class="blank">(type: hair, outfit, makeup)</p> trends you need to try</li>
+    <li> <p class="blank">(hair, outfit, makeup, etc.)</p> trends you need to try</li>
     <li> 13 of the best products from <p class="blank">(brand)</p></li>
     <li> How To <p class="blank">(make money as a teen, pack for spring break, pick the perfect prom dress etc)</p></li>
     <li> <p class="blank">(holiday/event)</p> must haves/essentials</li>
