--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -195,12 +195,14 @@
   .newpost--new--profile {
     color: white !important;
     background-color: #2a2a2a;
-    border: 1px solid #2a2a2a;
+    border: 1px solid #2a2a2a !important;
     padding: 10px 25px;
     text-decoration: none !important;
     margin-right: 20px;
     margin-bottom: 20px;
     z-index: 100;
+    font-family: "Playfair Display";
+    line-height: 1.5;
   }
 }
 
@@ -427,7 +429,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border-bottom: 1px solid #E9E9E9;
   margin: 10px 0;
   padding: 10px 30px 20px 30px;
 
