--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -2,4 +2,4 @@ $('#comment_<%= @comment.id %>').remove()
 <% if @parent.present? %>
   $('.toggle_<%= @parent.id %>').text("Reply (<%= @parent.comments.count %>)");
 <% end %>
-$('.date_ago').val("<%= @comment.user.comments.count %> points, <%= time_ago_in_words(@comment.created_at) %> ago");
+$('.date_ago').val("<%= time_ago_in_words(@comment.created_at) %> ago");
