--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -83,7 +83,7 @@ blockquote {
             <%= render :partial => 'comments/comment_form', locals: {post: @post, comment: @comment } %>
             <ul class="list-group list-group-flush" id="list-group-comments">
               <% if @comments.count.eql? 0 %>
-                <i>Social sharing is turned on! Ask other TTM writers to give their feedback on your article by posting the link to this article in the <a href="https://www.facebook.com/groups/615063885673363/" target="_blank" style="color: #65B19D;">Facebook group</a>.</i>
+                <i>Social sharing is turned on! Your article is now viewable in the <%= link_to("writer community", "/community") %>.</i>
               <% else %>
                 <% @comments.each do |comment| %>
                   <%= render :partial => 'comments/comment', locals: {comment: comment, post: @post} %>
