--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,43 @@
 <div class="skinny_wrapper" id="comments_feed">
-  <h3>Your points: <%= current_user.comments.count %></h3>
-  <h3>Conversations you're following</h3>
+  <h3>Your available points: <%= @points %></h3>
+  <div class="progress mt-3">
+    <div class="progress-bar" role="progressbar" style="width: <%= @points / 3 %>%" aria-valuenow="<%= @points %>" aria-valuemin="0" aria-valuemax="300"></div>
+  </div>
+  <p>You can use your points to promote your shared drafts and get more feedback from other writers. Earn points by commenting and giving valuable feedback on the shared articles below.</p>
+  <% if @my_shared_drafts.count.eql? 0 %>
+    <p class="mb-0"><i>You haven't turned on sharing for any of your drafts.</i></p>
+  <% else %>
+    <div class="flex-wrapper flex-drafts">
+      <% @my_shared_drafts.each do |draft| %>
+          <div class="card" style="width: 32%;">
+            <a href="<%= post_path(draft)%>">
+              <%= image_tag(draft.thumbnail.url(:large2), :class => "card-img-top") %>
+            </a>
+            <div class="card-body">
+              <p class="card-text">Sharing has been turned on for your draft <%= link_to(draft.title, draft) %>.</p>
+            </div>
+            <% if draft.promoting_until.present? && draft.promoting_until > Time.now %>
+              <div class="rounded-bottom rgba-red-strong lighten-3 text-right p-3">
+                <p class="list-inline-item pr-2 white-text"><i class="fas fa-fire"></i> Promoting ends in <%= time_ago_in_words(draft.promoting_until) %></p>
+              </div>
+            <% else %>
+              <div class="rounded-bottom lighten-3 text-right p-1">
+                <div class="<% if @points < 300 %>disabled<% end %> btn_cntnr mb-0 pb-0">
+                  <%= form_for draft do |f| %>
+                    <% @initial = (draft.promoting_until.present? && draft.promoting_until > Time.now) ? draft.promoting_until : Time.now %>
+                    <%= f.hidden_field :promoting_until, value: @initial + 1.day %>
+                    <%= f.submit 'Promote (300 points)',
+                        data: {confirm: "This draft will be featured for a day on the community page. You are using 20 points out of your available #{@points} points to do this. Do you want to continue?"},
+                        class: "newpost--new--profile" %>
+                  <% end %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+      <% end %>
+    </div>
+  <% end %>
+  <h3>Conversations you're following:</h3>
   <div class="comments">
     <ul class="list-group list-group-flush" id="list-group-comments">
       <% @all.each do |comment| %>
@@ -17,16 +54,21 @@
       <p><i>You aren't following any conversations. Comment on some articles to get involved in the community.</i></p>
     <% end %>
   </div>
-  <h3>Drafts looking for peer feedback</h3>
+  <h3>Drafts looking for peer feedback:</h3>
   <div class="flex-wrapper flex-drafts">
     <% @shared_drafts.each do |draft| %>
+      <% @featured = draft.promoting_until.present? && draft.promoting_until > Time.now %>
+      <% @color = @featured ? "rgba-red-strong" : "mdb-color" %>
       <a href="<%= post_path(draft)%>">
-        <div class="card" style="width: 32%">
+        <div class="card" style="width: 32%; <% if @unseen_shared_drafts.to_a.include? draft %>background-color: #E6F6FF;<% end %>">
           <%= image_tag(draft.thumbnail.url(:large2), :class => "card-img-top") %>
           <div class="card-body">
             <p class="card-text"><%= link_to(draft.user.full_name, draft.user) %> is asking for peer feedback on <%= link_to draft.title, draft %></p>
+            <% if @featured %>
+              <p class="card-text"><i class="fas fa-fire"></i> This draft is being promoted. All feedback given will be rewarded twice as many points.</p>
+            <% end %>
           </div>
-          <div class="rounded-bottom mdb-color lighten-3 text-left p-3">
+          <div class="rounded-bottom <%= @color %> lighten-3 text-left p-3">
             <p class="list-inline-item pr-2 white-text"><%= link_to("Give Feedback", post_path(draft), style: "color: white !important;")%></p>
             <p class="list-inline-item pr-2 white-text"><i class="fa fa-comments" aria-hidden="true"></i> <%= draft.comments.count %> comments</p>
           </div>
