--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="skinny_wrapper wrapper_padding" style="max-width: 1000px;">
+<div class="skinny_wrapper wrapper_padding" style="max-width: 1000px; padding-top: 10px;">
   <%= render 'form' %>
   <% if current_user && current_user.admin? %>
     <%= link_to "Delete Account", user_path(@user), method: :delete, data: {confirm: "Are you sure you want to delete this user?"},  class: "pitch_btn delete_btn theme_color", style: "margin-top: -90px;" %>
